@@ -13,15 +13,15 @@ package com.viaoa.object;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
-import java.util.Vector;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.logging.Logger;
 
 import com.viaoa.datasource.OADataSource;
@@ -39,13 +39,24 @@ import com.viaoa.util.OAPropertyPath;
 import com.viaoa.util.OAString;
 
 /**
- * @author vincevia
- * @see OAThreadLocalDelegate#setObjectCacheAddMode(int)
- * @see OAThreadLocalDelegate#getObjectCacheAddMode()
+ * Cache for OAObjects.  
+ * 
  */
 public class OAObjectCacheDelegate {
-	private static Logger LOG = Logger.getLogger(OAObjectCacheDelegate.class.getName());
+	private static final Logger LOG = Logger.getLogger(OAObjectCacheDelegate.class.getName());
 
+	private static final Map<Class<? extends OAObject>, List<OAObjectCacheListener<? extends OAObject>>> hmCacheListener = new ConcurrentHashMap<>();
+    private static final Map<Class<? extends OAObject>, WeakReference<Hub<? extends OAObject>>[]> hmCacheSelectAllHub = new HashMap<>(37,.75F);
+    private static final Map<String, WeakReference<Hub<? extends OAObject>>> hmCacheNamedHub = new HashMap<>(29,.75F);
+	
+	private static final AtomicInteger aiListenerCount = new AtomicInteger();
+	private static boolean bDisableCache = false;
+    
+	private static final LinkedBlockingQueue<SendAddEventInfo> queCacheSendAddEvent = new LinkedBlockingQueue<>();
+	private static volatile Thread threadCacheSendAddEvent;
+
+	private static final OAObjectCache objectCache = new OAObjectCache();
+    
 	protected static int DefaultAddMode = 1;
 
 	/**
@@ -64,7 +75,7 @@ public class OAObjectCacheDelegate {
 	/**
 	 * store object even if another exists see HubController#setAddMode
 	 */
-	static public final int OVERWRITE_DUPS = 3;
+	// static public final int OVERWRITE_DUPS = 3; // not used qqqqqqqqqqqqqq
 
 	/**
 	 * dont store objects. see HubController#setAddMode
@@ -75,27 +86,24 @@ public class OAObjectCacheDelegate {
 	/**
 	 * Automatically set by Hub.select() when a select is done without a where clause. A WeakReference is used for storage. When a new
 	 * OAObject is created, it will be added to a SelectAllHub.
-	 *
-	 * @since 2007/08/16
 	 */
 	public static Hub[] getSelectAllHubs(Class clazz) {
+		
 		if (clazz == null) {
 			return null;
 		}
-		WeakReference[] refs = (WeakReference[]) OAObjectHashDelegate.hashCacheSelectAllHub.get(clazz);
-		if (refs == null) {
-			return null;
-		}
-		synchronized (OAObjectHashDelegate.hashCacheSelectAllHub) {
+		synchronized (OAObjectCacheDelegate.hmCacheSelectAllHub) {
+			WeakReference<Hub<? extends OAObject>>[] refs = OAObjectCacheDelegate.hmCacheSelectAllHub.get(clazz);
+			if (refs == null) return null;
 			Hub[] hubs = new Hub[refs.length];
 			for (int i = 0; i < refs.length; i++) {
 				hubs[i] = (Hub) refs[i].get();
 				if (hubs[i] == null) {
 					if (refs.length == 1) {
-						OAObjectHashDelegate.hashCacheSelectAllHub.remove(clazz);
+						OAObjectCacheDelegate.hmCacheSelectAllHub.remove(clazz);
 						return null;
 					} else {
-						OAObjectHashDelegate.hashCacheSelectAllHub.put(clazz, removeSelectAllHubs(refs, refs[i]));
+						OAObjectCacheDelegate.hmCacheSelectAllHub.put(clazz, removeSelectAllHubs(refs, refs[i]));
 						return getSelectAllHubs(clazz);
 					}
 				}
@@ -142,8 +150,8 @@ public class OAObjectCacheDelegate {
 		Class clazz = hub.getObjectClass();
 		LOG.fine("Hub.objectClass = " + clazz);
 
-		synchronized (OAObjectHashDelegate.hashCacheSelectAllHub) {
-			WeakReference[] refs = (WeakReference[]) OAObjectHashDelegate.hashCacheSelectAllHub.get(clazz);
+		synchronized (OAObjectCacheDelegate.hmCacheSelectAllHub) {
+			WeakReference[] refs = (WeakReference[]) OAObjectCacheDelegate.hmCacheSelectAllHub.get(clazz);
 			if (refs == null) {
 				refs = new WeakReference[1];
 			} else {
@@ -158,7 +166,7 @@ public class OAObjectCacheDelegate {
 				refs = refs2;
 			}
 			refs[refs.length - 1] = new WeakReference(hub);
-			OAObjectHashDelegate.hashCacheSelectAllHub.put(clazz, refs);
+			OAObjectCacheDelegate.hmCacheSelectAllHub.put(clazz, refs);
 			LOG.finer("total for class=" + clazz + " is now " + refs.length);
 		}
 	}
@@ -176,21 +184,20 @@ public class OAObjectCacheDelegate {
 		if (clazz == null) {
 			return;
 		}
-		// LOG.finest("Hub.objectClass = "+clazz);
-		WeakReference[] refs = (WeakReference[]) OAObjectHashDelegate.hashCacheSelectAllHub.get(clazz);
-		if (refs == null) {
-			return;
-		}
-		synchronized (OAObjectHashDelegate.hashCacheSelectAllHub) {
+
+		synchronized (OAObjectCacheDelegate.hmCacheSelectAllHub) {
+			WeakReference[] refs = (WeakReference[]) OAObjectCacheDelegate.hmCacheSelectAllHub.get(clazz);
+			if (refs == null) return;
+			
 			for (int i = 0; i < refs.length; i++) {
 				Hub h = (Hub) refs[i].get();
 				if (h == hub) {
 					if (refs.length == 1) {
-						OAObjectHashDelegate.hashCacheSelectAllHub.remove(clazz);
+						OAObjectCacheDelegate.hmCacheSelectAllHub.remove(clazz);
 						LOG.fine("total for class=" + clazz + " is now 0");
 					} else {
 						WeakReference[] refNew = removeSelectAllHubs(refs, refs[i]);
-						OAObjectHashDelegate.hashCacheSelectAllHub.put(clazz, refNew);
+						OAObjectCacheDelegate.hmCacheSelectAllHub.put(clazz, refNew);
 						LOG.finer("total for class=" + clazz + " is now " + refNew.length);
 					}
 				}
@@ -199,8 +206,8 @@ public class OAObjectCacheDelegate {
 	}
 
 	public static void removeAllSelectAllHubs() {
-		synchronized (OAObjectHashDelegate.hashCacheSelectAllHub) {
-			OAObjectHashDelegate.hashCacheSelectAllHub.clear();
+		synchronized (OAObjectCacheDelegate.hmCacheSelectAllHub) {
+			OAObjectCacheDelegate.hmCacheSelectAllHub.clear();
 		}
 	}
 
@@ -209,13 +216,15 @@ public class OAObjectCacheDelegate {
 	 *
 	 * @param name reference name to use, not case-sensitive
 	 */
-	static public void setNamedHub(String name, Hub hub) {
+	static public void setNamedHub(String name, Hub<? extends OAObject> hub) {
 		LOG.fine("Hub=" + hub + ", name=" + name);
 		if (name == null || hub == null) {
 			return;
 		}
-		OAObjectHashDelegate.hashCacheNamedHub.put(name.toUpperCase(), new WeakReference(hub));
-		LOG.fine("total named Hubs is now =" + OAObjectHashDelegate.hashCacheNamedHub.size());
+		synchronized (OAObjectCacheDelegate.hmCacheNamedHub) {
+			OAObjectCacheDelegate.hmCacheNamedHub.put(name.toUpperCase(), new WeakReference(hub));
+			LOG.fine("total named Hubs is now =" + OAObjectCacheDelegate.hmCacheNamedHub.size());
+		}
 	}
 
 	/**
@@ -229,18 +238,20 @@ public class OAObjectCacheDelegate {
 		if (name == null) {
 			return null;
 		}
-		WeakReference ref = (WeakReference) OAObjectHashDelegate.hashCacheNamedHub.get(name.toUpperCase());
+		
 		Hub hub = null;
-		if (ref != null) {
-			hub = (Hub) ref.get();
-			if (hub == null) {
-				OAObjectHashDelegate.hashCacheNamedHub.remove(name);
+		synchronized (OAObjectCacheDelegate.hmCacheNamedHub) {
+			WeakReference ref = (WeakReference) OAObjectCacheDelegate.hmCacheNamedHub.get(name.toUpperCase());
+			if (ref != null) {
+				hub = (Hub) ref.get();
+				if (hub == null) {
+					OAObjectCacheDelegate.hmCacheNamedHub.remove(name.toUpperCase());
+				}
 			}
 		}
 		return hub;
 	}
 
-	private static final AtomicInteger aiListenerCount = new AtomicInteger();
 
 	/**
 	 * Listeners support for HubEvents.
@@ -249,22 +260,16 @@ public class OAObjectCacheDelegate {
 	 * Events from Hubs: afterAdd, afterRemove<br>
 	 * Events from OAObjects: afterPropertyChange
 	 */
-	public static <T extends OAObject> void addListener(Class<T> clazz, OAObjectCacheListener<T> l) {
+	public static <T extends OAObject> void addListener(final Class<T> clazz, final OAObjectCacheListener<T> l) {
 		LOG.fine("class=" + clazz);
-		Vector vecListener = (Vector) OAObjectHashDelegate.hashCacheListener.get(clazz);
-		if (vecListener == null) {
-			synchronized (OAObjectHashDelegate.hashCacheListener) {
-				vecListener = (Vector) OAObjectHashDelegate.hashCacheListener.get(clazz);
-				if (vecListener == null) {
-					vecListener = new Vector(5, 5);
-					OAObjectHashDelegate.hashCacheListener.put(clazz, vecListener);
-				}
+		List alListener = OAObjectCacheDelegate.hmCacheListener.computeIfAbsent(clazz, k -> new ArrayList<>());
+		
+		synchronized (alListener) {
+			if (!alListener.contains(l)) {
+				aiListenerCount.incrementAndGet();
+				alListener.add(l);
+				LOG.fine("total listeners=" + aiListenerCount.get());
 			}
-		}
-		if (!vecListener.contains(l)) {
-			aiListenerCount.incrementAndGet();
-			vecListener.addElement(l);
-			LOG.fine("total listeners=" + aiListenerCount.get());
 		}
 	}
 
@@ -288,24 +293,27 @@ public class OAObjectCacheDelegate {
 	 */
 	public static void resetCache() {
 		LOG.warning("call to reset cache, UnitTestMode=" + UnitTestMode);
-		// 20191002
 		if (!UnitTestMode) {
 			throw new RuntimeException("Can only call reset cache if UnitTestMode is true");
 		}
-		OAObjectHashDelegate.hashCacheClass.clear();
-		OAObjectHashDelegate.hashCacheListener.clear();
+		OAObjectCacheDelegate.hmCacheListener.clear();
 		aiListenerCount.set(0);
-		OAObjectHashDelegate.hashCacheSelectAllHub.clear();
-		OAObjectHashDelegate.hashCacheNamedHub.clear();
+		synchronized (OAObjectCacheDelegate.hmCacheSelectAllHub) {
+			OAObjectCacheDelegate.hmCacheSelectAllHub.clear();
+		}
+		synchronized (OAObjectCacheDelegate.hmCacheNamedHub) {
+			OAObjectCacheDelegate.hmCacheNamedHub.clear();
+		}
 	}
 
 	/* see addListener(Class, HubListener) */
 	public static void removeListener(Class clazz, OAObjectCacheListener l) {
 		LOG.fine("class=" + clazz);
-		Vector vecListener = (Vector) OAObjectHashDelegate.hashCacheListener.get(clazz);
-		if (vecListener != null) {
-			synchronized (vecListener) {
-				if (vecListener.remove(l)) {
+		
+		List alListener = OAObjectCacheDelegate.hmCacheListener.get(clazz);
+		if (alListener != null) {
+			synchronized (alListener) {
+				if (alListener.remove(l)) {
 					aiListenerCount.decrementAndGet();
 					LOG.fine("total listeners=" + aiListenerCount.get());
 				}
@@ -316,28 +324,30 @@ public class OAObjectCacheDelegate {
 	/**
 	 * Returns array of HubListeners for a given class. see addListener(Class, HubListener)
 	 */
-	public static OAObjectCacheListener[] getListeners(Class c) {
+	@SuppressWarnings("unchecked")
+	public static <T extends OAObject> OAObjectCacheListener<T>[] getListeners(final Class<T> c) {
 		if (aiListenerCount.get() == 0) {
 			return null;
 		}
-		// LOG.finest("class="+c);
-		Vector vecListener = (Vector) OAObjectHashDelegate.hashCacheListener.get(c);
-		if (vecListener == null) {
+	
+	    List<? extends OAObjectCacheListener<?>> alListener = OAObjectCacheDelegate.hmCacheListener.get(c);
+		if (alListener == null) {
 			return null;
 		}
 
-		OAObjectCacheListener[] listeners = null;
-		synchronized (vecListener) {
-			int x = vecListener.size();
-			listeners = new OAObjectCacheListener[x];
+		OAObjectCacheListener<T>[] listeners = null;
+		synchronized (alListener) {
+			int x = alListener.size();
+			listeners = (OAObjectCacheListener<T>[]) new OAObjectCacheListener<?>[x];
+			
 			for (int i = 0; i < x; i++) {
-				listeners[i] = (OAObjectCacheListener) vecListener.elementAt(i);
+				listeners[i] =  (OAObjectCacheListener<T>) alListener.get(i);
 			}
 		}
-		// LOG.finest("total size="+x);
 		return listeners;
 	}
-
+	
+	
 	/** called by OAObject to send a HubEvent. */
 	protected static void fireAfterPropertyChange(OAObject obj, OAObjectKey origKey, String propertyName, Object oldValue, Object newValue,
 			boolean bLocalOnly, boolean bSendEvent) {
@@ -359,91 +369,64 @@ public class OAObjectCacheDelegate {
 		}
 	}
 
-	protected static void fireAfterLoadEvent(Object obj) {
-		if (aiListenerCount.get() == 0) {
-			return;
-		}
-		if (obj == null) {
-			return;
-		}
+	protected static <T extends OAObject> void fireAfterLoadEvent(T obj) {
+		if (obj == null) return;
+		if (aiListenerCount.get() == 0) return;
 
-		final OAObjectCacheListener[] hl = getListeners(obj.getClass());
-		if (hl == null) {
-			return;
-		}
+		final OAObjectCacheListener<T>[] hl = getListeners((Class<T>) obj.getClass());
+		if (hl == null) return;
 		final int x = hl.length;
 		if (x > 0) {
-			// LOG.finest("Hub="+thisHub+", object="+obj);
 			for (int i = 0; i < x; i++) {
-				hl[i].afterLoad((OAObject) obj);
+				hl[i].afterLoad(obj);
 			}
 		}
 	}
 
-	public static void fireAfterAddEvent(Hub hub, Object obj) {
-		if (aiListenerCount.get() == 0) {
-			return;
-		}
-		if (obj == null) {
-			return;
-		}
-		final OAObjectCacheListener[] hl = getListeners(obj.getClass());
-		if (hl == null) {
-			return;
-		}
+	public static <T extends OAObject> void fireAfterAddEvent(Hub<T> hub, T obj) {
+		if (hub == null || obj == null) return;
+		if (aiListenerCount.get() == 0) return;
+
+		final OAObjectCacheListener<T>[] hl = getListeners((Class<T>) obj.getClass());
+		if (hl == null) return;
 		final int x = hl.length;
 		if (x > 0) {
 			// LOG.finest("Hub="+thisHub+", object="+obj);
 			for (int i = 0; i < x; i++) {
-				hl[i].afterAdd(hub, (OAObject) obj);
+				hl[i].afterAdd(hub, obj);
 			}
 		}
 	}
 
-	public static void fireAfterRemoveEvent(Hub hub, Object obj) {
-		if (aiListenerCount.get() == 0) {
-			return;
-		}
-		if (obj == null) {
-			return;
-		}
-		final OAObjectCacheListener[] hl = getListeners(obj.getClass());
-		if (hl == null) {
-			return;
-		}
+	
+	
+	public static <T extends OAObject> void fireAfterRemoveEvent(Hub<T> hub, T obj) {
+		if (hub == null || obj == null) return;
+		if (aiListenerCount.get() == 0) return;
+
+		final OAObjectCacheListener<T>[] hl = getListeners((Class<T>) obj.getClass());
+		if (hl == null) return;
+
 		final int x = hl.length;
 		if (x > 0) {
-			// LOG.finest("Hub="+thisHub+", object="+obj);
 			for (int i = 0; i < x; i++) {
-				hl[i].afterRemove(hub, (OAObject) obj);
+				hl[i].afterRemove(hub, obj);
 			}
 		}
 	}
 
-	/**
-	 * Removes all objects from HubController.
-	 *
-	 * @see #clearCache(Class) to remove objects for a Class.
-	 * @see #resetCache()
-	 */
+	
+	
 	public static void removeAllObjects() {
 		LOG.warning("removing all Objects was called (fyi only)");
-		OAObjectHashDelegate.hashCacheClass.clear();
+		for (Class c : getOAObjectCache().getClasses()) {
+			removeAllObjects(c);
+		}
 	}
 
 	public static void removeAllObjects(Class c) {
-		if (c == null) {
-			return;
-		}
 		LOG.warning(String.format("removing all Objects for class=%s was called (fyi only)", c.getSimpleName()));
-
-		TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(c);
-		if (tmh != null) {
-			TreeMap tm = tmh.treeMap;
-			if (tm != null) {
-				tm.clear();
-			}
-		}
+		getOAObjectCache().clearCache(c);
 	}
 
 	/**
@@ -455,136 +438,56 @@ public class OAObjectCacheDelegate {
 
 	public static void visit(OACallback callback) {
 		LOG.fine("visit");
-		for (Class c : OAObjectHashDelegate.hashCacheClass.keySet()) {
-			visit(callback, c);
-		}
+		getOAObjectCache().visit(callback);
 	}
 
-	public static void callback(Class clazz, OACallback callback) {
-		visit(callback, clazz);
+	public static void callback(Class<? extends OAObject> clazz, OACallback callback) {
+		getOAObjectCache().visit(clazz, callback);
 	}
 
 	public static void visit(Class clazz, OACallback callback) {
-		visit(callback, clazz);
+		getOAObjectCache().visit(clazz, callback);
 	}
 
 	/**
 	 * Used to <i>visit</i> every object in the Cache for a Class.
 	 */
 	public static void callback(OACallback callback, Class clazz) {
-		visit(callback, clazz);
+		getOAObjectCache().visit(clazz, callback);
 	}
 
 	public static void visit(OACallback callback, Class clazz) {
-		if (callback == null) {
-			return;
-		}
-		TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(clazz);
-		if (tmh == null) {
-			return;
-		}
-
-		try {
-			// 2081223 removed lock so that thisdoes not cause a deadlock
-			//      since the callback could be doing something that could cause one.
-			//was: tmh.rwl.readLock().lock();
-
-			tmh.rwl.readLock().lock();
-			TreeMap tm = tmh.treeMap;
-			Map.Entry me = tm.firstEntry();
-			tmh.rwl.readLock().unlock();
-
-			while (me != null) {
-				WeakReference ref = (WeakReference) me.getValue();
-				Object obj = ref.get();
-				if (obj != null) {
-					if (!callback.updateObject(obj)) {
-						break;
-					}
-				}
-				me = tm.higherEntry(me.getKey());
-			}
-		} finally {
-			//was: tmh.rwl.readLock().unlock();
-		}
+		getOAObjectCache().visit(clazz, callback);
 	}
 
 	/**
-	 * Populates a Vector of Strings that describe the Classes and amount of objects that are loaded.
+	 * Populates a List of Strings that describe the Classes and amount of objects that are loaded.
 	 */
-	public static void getInfo(Vector vec) {
-		// LOG.finer("called");
-		Vector v = getInfo();
-		int x = v.size();
-		for (int i = 0; i < x; i++) {
-			vec.add(v.get(i));
-		}
+	public static void getInfo(List al) {
+		List alx = getInfo();
+		al.add(alx);
 	}
 
 	public static Class[] getClasses() {
-		ArrayList<Class> al = new ArrayList<>();
-		Enumeration<Class> enumx = OAObjectHashDelegate.hashCacheClass.keys();
-		for (; enumx.hasMoreElements();) {
-			Class c = enumx.nextElement();
-			al.add(c);
-		}
-		Class[] cs = new Class[al.size()];
-		al.toArray(cs);
-		return cs;
+		return getOAObjectCache().getClasses();
 	}
 
 	public static int getTotal(Class clazz) {
-		TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(clazz);
-		if (tmh == null) {
-			return 0;
-		}
-		try {
-			tmh.rwl.readLock().lock();
-			return tmh.treeMap.size();
-		} finally {
-			tmh.rwl.readLock().unlock();
-		}
+		return getOAObjectCache().getTotal(clazz);
 	}
 
-	public static OAObject getRandom(Class<? extends OAObject> clazz, int max) {
-		TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(clazz);
-		Map.Entry<OAObjectKey, WeakReference<OAObject>> ent = null;
-
-		if (tmh == null) {
-			return null;
-		}
-		try {
-			tmh.rwl.readLock().lock();
-			int x = Math.min(tmh.treeMap.size(), max);
-			x = (int) (Math.random() * x);
-			ent = tmh.treeMap.firstEntry();
-			for (int i = 0; i < x && ent != null; i++) {
-				ent = tmh.treeMap.higherEntry(ent.getKey());
-			}
-			if (ent == null) {
-				return null;
-			}
-			WeakReference<OAObject> ref = ent.getValue();
-			if (ref == null) {
-				return null;
-			}
-			return ref.get();
-		} finally {
-			tmh.rwl.readLock().unlock();
-		}
-	}
 
 	/**
-	 * Returns a Vector of Strings that describe the Classes and amount of objects that are loaded.
+	 * Returns a List of Strings that describe the Classes and amount of objects that are loaded.
 	 */
-	public static Vector getInfo() {
+	public static List getInfo() {
 		// LOG.finer("called");
-		Vector vec = new Vector(20, 20);
-		vec.addElement("HubController Info --- ");
+		List<String> al = new ArrayList();
+		al.add("HubController Info --- ");
 
 		Class[] cs = getClasses();
 		if (cs == null) {
-			return vec;
+			return al;
 		}
 		int x = cs.length;
 
@@ -600,12 +503,11 @@ public class OAObjectCacheDelegate {
 		*/
 
 		for (int i = 0; i < x; i++) {
-			TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(cs[i]);
-			vec.addElement(String.format(((Class) cs[i]).getName(), fmt) + " " + String.format("%,2d", getTotal(cs[i])));
+			al.add(OAString.format(cs[i].getName(), fmt) + " " + String.format("%,2d", getTotal(cs[i])));
 		}
-		vec.addElement(OAString.fmt("TempHubs", fmt) + " " + HubTemp.getCount());
-		Collections.sort(vec);
-		return vec;
+		al.add(OAString.fmt("TempHubs", fmt) + " " + HubTemp.getCount());
+		Collections.sort(al);
+		return al;
 	}
 
 	/**
@@ -625,31 +527,23 @@ public class OAObjectCacheDelegate {
 	/**
 	 * @see #setDefaultAddMode(int)
 	 */
-	static public int getDetaultAddMode() {
+	static public int getDefaultAddMode() {
 		return DefaultAddMode;
 	}
 
+
+	public static void clearCache(Class clazz) {
+		getOAObjectCache().clearCache(clazz);
+	}
+
+
 	/**
-	 * Used by OAObject to cache new objects. Objects are removed by OAObject.finalize() see #setAddMode(int)
-	 *
-	 * @return either the object that was "obj" or the object that was already in the tree.
+	 * Used to cache new objects using a weakReference.
+	 * @return if another object matches, else this obj. 
 	 */
 	public static OAObject add(OAObject obj) {
 		return add(obj, false, true);
 	}
-
-	/**
-	 * Remove objects from cache for a class.
-	 *
-	 * @see #removeAllObjects()
-	 * @see #resetCache()
-	 */
-	public static void clearCache(Class clazz) {
-		synchronized (OAObjectHashDelegate.hashCacheClass) {
-			OAObjectHashDelegate.hashCacheClass.remove(clazz);
-		}
-	}
-
 	public static OAObject add(OAObject obj, boolean bErrorIfExists, boolean bAddToSelectAll) {
 		return add(obj, bErrorIfExists, bAddToSelectAll, false);
 	}
@@ -662,19 +556,8 @@ public class OAObjectCacheDelegate {
 		return objx;
 	}
 
-	private static boolean bDisableCache = false;
 
-	public static void setDisableCache(boolean b) {
-		bDisableCache = b;
-	}
 
-	private static boolean bDisableRemove = false;
-
-	public static void setDisableRemove(boolean b) {
-		bDisableRemove = b;
-	}
-
-	// if there is an obj in the cache with same objId then it is returned, else obj will be added.
 	private static OAObject _add(final OAObject obj, final boolean bErrorIfExists, boolean bAddToSelectAll,
 			final boolean bSendAddEventInAnotherThread) {
 		final OAObjectKey key = OAObjectKeyDelegate.getKey(obj);
@@ -684,110 +567,70 @@ public class OAObjectCacheDelegate {
 		return objResult;
 	}
 
+	
 	private static OAObject _add2(final OAObject obj, final OAObjectKey key, final boolean bErrorIfExists, boolean bAddToSelectAll,
 			final boolean bSendAddEventInAnotherThread) {
-		if (bDisableCache) {
-			return obj;
-		}
-		// LOG.finer("obj="+obj);
-		if (obj == null) {
-			return null;
-		}
 
-		OAObject result = null;
-		Object removeObj = null;
+		if (obj == null) return null;
+
+		OAObject objFound;
+		
+		OAObjectKey ok = obj.getObjectKey();
+		if (ok != null && ok.hasValidObjectIds()) {
+			objFound = getOAObjectCache().getObject(obj.getClass(), ok);
+		}
+		else objFound = null;
+		if (objFound == null) objFound = getOAObjectCache().getObject(obj.getClass(), obj.getGuid());
+
 		boolean bSendAddEvent = false;
-
-		final TreeMapHolder tmh = getTreeMapHolder(obj.getClass(), true);
-		try {
-			tmh.rwl.writeLock().lock();
-			final TreeMap tm = tmh.treeMap;
-
-			WeakReference ref = (WeakReference) tm.get(key);
-
-			// 20201109 check to see if it's in tree with only guid
-			if (ref == null && key != null && key.isNew()) {
-				OAObjectKey keyGuidOnly = new OAObjectKey((Object[]) null, key.guid, true);
-				ref = (WeakReference) tm.get(keyGuidOnly);
+		int mode = OAThreadLocalDelegate.getObjectCacheAddMode();
+		if (objFound == null) {
+			if (mode != IGNORE_ALL) {
+				getOAObjectCache().updateObject(obj);
+				bSendAddEvent = true;
+			}			
+		}
+		else {
+			if (mode == NO_DUPS) {
+				if (bErrorIfExists) {
+					throw new RuntimeException("OAObjectCacheDelegate.add() object already exists " + obj);
+				}
+				bAddToSelectAll = false;
 			}
-
-			if (ref != null) {
-				result = (OAObject) ref.get();
-				if (result == obj) {
-					return obj;
-				}
+			/*
+			else if (mode == OVERWRITE_DUPS) {
+			} 
+			*/
+			else {
+				bAddToSelectAll = false;
 			}
-
-			int mode = OAThreadLocalDelegate.getObjectCacheAddMode();
-			if (result == null) {
-				if (ref != null) {
-					tm.remove(key); // previous value was gc'd
-				}
-				if (mode != IGNORE_ALL) {
-					ref = new WeakReference(obj);
-					tm.put(key, ref);
-					bSendAddEvent = true;
-				}
-				result = obj;
-			} else { // already in treemap
-				if (mode == NO_DUPS) {
-					if (bErrorIfExists) {
-						throw new RuntimeException("OAObjectCacheDelegate.add() object already exists " + obj);
-					}
-					bAddToSelectAll = false;
-				} else if (mode == OVERWRITE_DUPS) {
-					if (ref != null) {
-						tm.remove(key); // previous value was gc'd
-					}
-					ref = new WeakReference(obj);
-					tm.put(key, ref);
-					removeObj = result;
-					result = obj;
-					bSendAddEvent = true;
-					// LOG.fine("overwrite object="+obj);
-				} else {
-					// Ignore duplicate - automatically set as the default mode when using OA RMI
-					bAddToSelectAll = false;
-				}
-			}
-		} finally {
-			tmh.rwl.writeLock().unlock();
 		}
 
-		// outside of lock
-		if (bAddToSelectAll && (result == obj)) {
+		if (bAddToSelectAll) {
 			Hub[] hs = getSelectAllHubs(obj.getClass());
 			for (int i = 0; hs != null && i < hs.length; i++) {
-				LOG.finer("adding to selectAll Hub=" + hs[i]);
-				if (removeObj != null) {
-					hs[i].remove(removeObj);
-				}
 				hs[i].add(obj);
 			}
 		}
-
 		if (bSendAddEvent) {
 			fireAfterAddEvent(obj, bSendAddEventInAnotherThread);
 		}
-		return result;
-	}
 
-	protected static void fireAfterAddEvent(Object obj, boolean bSendAddEventInAnotherThread) {
-		if (aiListenerCount.get() == 0) {
-			return;
-		}
-		if (obj == null) {
-			return;
-		}
+		if (objFound != null) return objFound;
+		return obj;
+	}	
+	
+	
+	
 
-		final OAObjectCacheListener[] hls = getListeners(obj.getClass());
-		if (hls == null) {
-			return;
-		}
+	protected static <T extends OAObject> void fireAfterAddEvent(T obj, boolean bSendAddEventInAnotherThread) {
+		if (obj == null) return;
+		if (aiListenerCount.get() == 0) return;
+
+		final OAObjectCacheListener<T>[] hls = getListeners((Class<T>) obj.getClass());
+		if (hls == null) return;
 		final int x = hls.length;
-		if (x == 0) {
-			return;
-		}
+		if (x == 0) return;
 
 		if (bSendAddEventInAnotherThread) {
 			if (threadCacheSendAddEvent == null) {
@@ -796,11 +639,12 @@ public class OAObjectCacheDelegate {
 			queCacheSendAddEvent.add(new SendAddEventInfo(hls, obj));
 		} else {
 			for (int i = 0; i < x; i++) {
-				hls[i].afterAdd((OAObject) obj);
+				hls[i].afterAdd(obj);
 			}
 		}
 	}
 
+	
 	private static class SendAddEventInfo {
 		OAObjectCacheListener[] hls;
 		Object obj;
@@ -811,8 +655,6 @@ public class OAObjectCacheDelegate {
 		}
 	}
 
-	private final static LinkedBlockingQueue<SendAddEventInfo> queCacheSendAddEvent = new LinkedBlockingQueue<>();
-	private static volatile Thread threadCacheSendAddEvent;
 
 	protected static synchronized void startCacheSendAddEventThread() {
 		if (threadCacheSendAddEvent != null) {
@@ -848,106 +690,18 @@ public class OAObjectCacheDelegate {
 		}
 	}
 
-	/** Used by OAObjectKeyDelegate.updateKey when object Id property is changed. */
-	protected static void rehash(OAObject obj, OAObjectKey oldKey) {
-		if (bDisableCache) {
-			return;
-		}
-		//LOG.fine("obj="+obj);
-		TreeMapHolder tmh = getTreeMapHolder(obj.getClass(), true);
-
-		OAObjectKey ok = OAObjectKeyDelegate.getKey(obj);
-		try {
-			tmh.rwl.writeLock().lock();
-			if (oldKey != null) {
-				WeakReference refx = tmh.treeMap.remove(oldKey);
-			}
-			tmh.treeMap.put(ok, new WeakReference(obj));
-		} finally {
-			tmh.rwl.writeLock().unlock();
-		}
+	
+	protected static void propertyKeyValueChanged(OAObject obj) {
+		if (bDisableCache) return;
+		getOAObjectCache().updateObject(obj);
 	}
 
-	/**
-	 * Used by OAObject.finalize to remove object from HubContoller cache.
-	 */
+	
 	static public void removeObject(final OAObject obj) {
-		if (bDisableCache) {
-			return;
-		}
-		if (bDisableRemove) {
-			return;
-		}
-		//LOG.finer("obj="+obj);
-		if (obj == null) {
-			return;
-		}
-
-		Class clazz = obj.getClass();
-		TreeMapHolder tmh = getTreeMapHolder(clazz, false);
-		if (tmh != null) {
-			final OAObjectKey key = OAObjectKeyDelegate.getKey(obj);
-
-			boolean b = true;
-			try {
-				tmh.rwl.writeLock().lock();
-				WeakReference ref = tmh.treeMap.remove(key);
-
-				// 20140307 make sure that the obj in tree is the one being removed
-				//   since an obj that is finalized could be reloaded.
-				if (ref != null) {
-					Object objx = ref.get();
-					if (objx != null && objx != obj) {
-						tmh.treeMap.put(key, ref); // put it back
-						b = false;
-					}
-				}
-
-			} finally {
-				tmh.rwl.writeLock().unlock();
-			}
-			if (b) {
-				OAObjectCSDelegate.objectFinalized(obj);
-			}
-		}
+		//qqqqqqqqqqqq no-op, wait for it to be gc'd ??
 	}
+	
 
-	/**
-	 * @return Hashtable of all objects loaded for a Class c.
-	 */
-	static TreeMapHolder getTreeMapHolder(Class c) {
-		return getTreeMapHolder(c, true);
-	}
-
-	static class TreeMapHolder {
-		TreeMap<OAObjectKey, WeakReference<OAObject>> treeMap = new TreeMap<OAObjectKey, WeakReference<OAObject>>();
-		ReentrantReadWriteLock rwl = new ReentrantReadWriteLock();
-	}
-
-	/**
-	 * @return Hashtable of all objects loaded for a Class c.
-	 */
-	static TreeMapHolder getTreeMapHolder(Class c, boolean bCreate) {
-		if (c == null) {
-			return null;
-		}
-		// LOG.finer("class="+c);
-		TreeMapHolder tmHolder = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(c);
-		if (tmHolder == null) {
-			if (!bCreate) {
-				return null;
-			}
-			synchronized (OAObjectHashDelegate.hashCacheClass) {
-				// make sure it hasnt been created by another thread
-				tmHolder = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(c);
-				if (tmHolder == null) {
-					tmHolder = new TreeMapHolder();
-					OAObjectHashDelegate.hashCacheClass.put(c, tmHolder);
-				}
-			}
-		}
-		return tmHolder;
-	}
 
 	/**
 	 * Used to retrieve any object based on its Object Id property value.
@@ -957,7 +711,7 @@ public class OAObjectCacheDelegate {
 	 * @see OAObjectKey#OAObjectKey
 	 * @see OAObject#equals
 	 */
-	public static <T> T getObject(Class<T> clazz, Object key) {
+	public static <T extends OAObject> T getObject(Class<T> clazz, Object key) {
 		return get(clazz, key);
 	}
 
@@ -966,85 +720,54 @@ public class OAObjectCacheDelegate {
 	 *
 	 * @see getObject(Class, Object)
 	 */
-	public static <T> T get(Class<T> clazz, int id) {
-		return get(clazz, new Integer(id));
+	public static <T extends OAObject> T get(Class<T> clazz, int id) {
+		return get(clazz, Integer.valueOf(id));
 	}
 
-	/**
-	 * Returns object with objectId of key.
-	 */
-	public static <T> T get(Class<T> clazz, Object key) {
-		if (bDisableCache) {
-			return null;
-		}
-		if (key == null || clazz == null) {
-			return null;
-			// LOG.finer("class="+clazz+", key="+key);
-		}
-
-		if (!OAObject.class.isAssignableFrom(clazz)) {
-			//LOG.warning("invalid class="+clazz);
-			return null;
-		}
-
-		TreeMapHolder tmh = getTreeMapHolder(clazz, false);
-		if (tmh != null) {
-			if (!(key instanceof OAObjectKey)) {
-				if (key instanceof OAObject) {
-					key = OAObjectKeyDelegate.getKey((OAObject) key);
-				} else {
-					key = OAObjectKeyDelegate.convertToObjectKey(clazz, key);
-				}
-			}
-			WeakReference ref;
-			final OAObjectKey ok = (OAObjectKey) key;
-
-			try {
-				tmh.rwl.readLock().lock();
-				ref = (WeakReference) tmh.treeMap.get(ok);
-				
-				// 20201109 check to see if it's in tree with only guid
-				if (ref == null && ok.guid != 0 && ok.isNew()) {
-					OAObjectKey keyGuidOnly = new OAObjectKey((Object[]) null, ok.guid, true);
-					ref = (WeakReference) tmh.treeMap.get(keyGuidOnly);
-				}
-				else if (ok.guid > 0 && ok.isEmpty()) { 
-				    // if searching for guid and key is not known 
-	                for (OAObjectKey okx : tmh.treeMap.keySet()) {
-	                    if (okx.guid == ok.guid) {
-	                        ref = (WeakReference) tmh.treeMap.get(okx);
-	                        break;
-	                    }
-	                }
-				}
-			} finally {
-				tmh.rwl.readLock().unlock();
-			}
-
-			if (ref != null) {
-				// LOG.finer("found, class="+clazz+", key="+key);
-				T objx = (T) ref.get();
-				return objx;
+	
+	public static <T extends OAObject> T get(Class<T> clazz, Object key) {
+		if (!(key instanceof OAObjectKey)) {
+			if (key instanceof OAObject) {
+				key = OAObjectKeyDelegate.getKey((OAObject) key);
+			} else {
+				key = OAObjectKeyDelegate.convertToObjectKey(clazz, key);
 			}
 		}
-		// LOG.finer("not found, class="+clazz+", key="+key);
-		return null;
+		
+		OAObject obj = null;
+		final OAObjectKey ok = (OAObjectKey) key;
+		if (ok.getGuid() != 0) {
+			obj = getOAObjectCache().getObject(clazz, ok.getGuid()); 
+		}
+		else {
+			OAObjectKey okNew = new OAObjectKey(ok.getObjectIds());
+			obj = getOAObjectCache().getObject(clazz,  okNew);
+		}
+		return (T) obj;
 	}
-
-	public static <T> T getNewObjectUsingGuid(Class<T> clazz, int guid) {
-		OAObjectKey objKey = new OAObjectKey(new Object[0], guid, true);
+	
+	public static <T extends OAObject> T getNewObjectUsingGuid(Class<T> clazz, long guid) {
+		Object obj = getOAObjectCache().getObject((Class<OAObject>) clazz, guid); 
+		return (T) obj;
+	}
+	public static <T extends OAObject> T getNewObjectUsingGuid_OLD(Class<T> clazz, long guid) {
+		OAObjectKey objKey = new OAObjectKey(new Object[0], guid);
 		return get(clazz, objKey);
 	}
 
-    public static <T> T getUsingGuid(Class<T> clazz, int guid) {
-        OAObjectKey objKey = new OAObjectKey(new Object[0], guid, false);
+	public static <T extends OAObject> T getUsingGuid(Class<T> clazz, long guid) {
+		Object obj = getOAObjectCache().getObject(clazz, guid); 
+		return (T) obj;
+	}
+	public static <T extends OAObject> T getUsingGuid_OLD(Class<T> clazz, long guid) {
+        OAObjectKey objKey = new OAObjectKey(new Object[0], guid);
         return get(clazz, objKey);
     }
 	
 	/**
 	 * Used to retrieve any object.
 	 *
-	 * @param key object to find.
+	 * @param currentIndexKey object to find.
 	 */
 	public static Object get(OAObject obj) {
 		if (bDisableCache) {
@@ -1120,12 +843,12 @@ public class OAObjectCacheDelegate {
 	}
 
 	public static Object find(Object fromObject, Class clazz, OAFinder finder, boolean bSkipNew, boolean bThrowException, int fetchAmount,
-			ArrayList<Object> alResults) {
+			List<OAObject> alResults) {
 		return _find(fromObject, clazz, finder, bSkipNew, bThrowException, fetchAmount, alResults);
 	}
 
 	public static Object find(Object fromObject, Class clazz, OAFilter filter, boolean bSkipNew, boolean bThrowException, int fetchAmount,
-			ArrayList<Object> alResults) {
+			List<OAObject> alResults) {
 		OAFinder finder = new OAFinder();
 		if (filter != null) {
 			finder.addFilter(filter);
@@ -1133,7 +856,7 @@ public class OAObjectCacheDelegate {
 		return _find(fromObject, clazz, finder, bSkipNew, bThrowException, fetchAmount, alResults);
 	}
 
-	public static Object find(Object fromObject, Class clazz, int fetchAmount, ArrayList<Object> alResults) {
+	public static Object find(Object fromObject, Class clazz, int fetchAmount, List<OAObject> alResults) {
 		return _find(fromObject, clazz, null, false, false, fetchAmount, alResults);
 	}
 
@@ -1148,7 +871,7 @@ public class OAObjectCacheDelegate {
 	 * @return last object in alResults, that can be used as the fromObject on the next call to fetch
 	 */
 	protected static Object _find(Object fromObject, Class clazz, String propertyPath, Object findValue, boolean bSkipNew,
-			boolean bThrowException, int fetchAmount, ArrayList<Object> alResults) {
+			boolean bThrowException, int fetchAmount, List<OAObject> alResults) {
 		if (bDisableCache) {
 			return null;
 		}
@@ -1200,66 +923,14 @@ public class OAObjectCacheDelegate {
 		return _find(fromObject, clazz, finder, bSkipNew, bThrowException, fetchAmount, alResults);
 	}
 
-	protected static Object _find(final Object fromObject, final Class clazz, final OAFinder finder, final boolean bSkipNew,
-			final boolean bThrowException, int fetchAmount, final ArrayList<Object> alResults) {
+	protected static Object _find(final Object fromObject, final Class<? extends OAObject> clazz, final OAFinder finder, final boolean bSkipNew,
+			final boolean bThrowException, int fetchAmount, final List<OAObject> alResults) {
 		if (bDisableCache) {
 			return null;
 		}
-		
-		final boolean bSkipDeleted = true; // todo: make as param ??
-
-		TreeMapHolder tmh = getTreeMapHolder(clazz, false);
-		if (tmh == null) {
-			return null;
-		}
-
-		try {
-			tmh.rwl.readLock().lock();
-
-			Map.Entry<OAObjectKey, WeakReference<OAObject>> me = null;
-			if (fromObject != null) {
-				OAObjectKey key;
-				if (fromObject instanceof OAObjectKey) {
-					key = (OAObjectKey) fromObject;
-				} else if (fromObject instanceof OAObject) {
-					key = OAObjectKeyDelegate.getKey((OAObject) fromObject);
-				} else {
-					key = OAObjectKeyDelegate.convertToObjectKey(clazz, fromObject);
-				}
-				if (key != null) {
-					me = tmh.treeMap.ceilingEntry(key);
-				}
-			}
-			if (me == null) {
-				me = tmh.treeMap.firstEntry();
-			}
-
-			boolean b = OAObject.class.isAssignableFrom(clazz);
-			while (me != null) {
-				WeakReference ref = (WeakReference) me.getValue();
-				Object object = ref.get();
-				if (object != null && object != fromObject) {
-					if (!bSkipNew || !b || !((OAObject) object).getNew()) {
-						if (!bSkipDeleted || !((OAObject) object).getDeleted()) {
-							if (finder == null || finder.findFirst((OAObject) object) != null) {
-								if (alResults == null) {
-									return object;
-								}
-								alResults.add(object);
-								if (alResults.size() >= fetchAmount) {
-									return object;
-								}
-							}
-						}
-					}
-				}
-				me = tmh.treeMap.higherEntry(me.getKey());
-			}
-		} finally {
-			tmh.rwl.readLock().unlock();
-		}
-		return null;
-	}
+		return getOAObjectCache().find(fromObject, clazz, finder, bSkipNew, fetchAmount, alResults);
+	}	
+	
 
 	/**
 	 * Refresh all objects from the datasource. This will be ran on the server, if called by client then it will async to run on server.
@@ -1277,7 +948,7 @@ public class OAObjectCacheDelegate {
 			LOG.fine("refreshing " + clazz.getSimpleName() + " will be ran on the server");
 			return;
 		}
-		final HashSet<Hub> hsHub = new HashSet<Hub>();
+		final Set<Hub> hsHub = new HashSet<Hub>();
 
 		OADataSource ds = OADataSource.getDataSource(clazz);
 		if (ds == null) {
@@ -1343,28 +1014,22 @@ public class OAObjectCacheDelegate {
 								clazz.getSimpleName(), cntTotal, cntAlone, cntHubs, cntInHubs));
 	}
 
-	/*qqq
+	/*
 	public static void updateClientInfo(OAClientInfo ci) {
 		// LOG.fine("called");
-	    Enumeration enumx = OAObjectHashDelegate.hashCacheClass.keys();
-	    ci.getCacheHashMap().clear();
-	
-	    Object[] cs = OAObjectHashDelegate.hashCacheClass.keySet().toArray();
-		if (cs == null) return;
-		int x = cs.length;
-		for (int i=0; i<x; i++) {
-	        TreeMapHolder tmh = (TreeMapHolder) OAObjectHashDelegate.hashCacheClass.get(cs[i]);
-	    	ci.getCacheHashMap().put(cs[i], tmh.treeMap.size());
-	    }
+		for (Class c : getOAObjectCache().getClasses()) {
+	    	ci.getCacheHashMap().put(c, getOAObjectCache().getTotal(c));
+		}
 	}
 	*/
+	
+	public static void setDisableCache(boolean b) {
+		bDisableCache = b;
+	}
+
+	public static OAObjectCache getOAObjectCache() {
+		return objectCache;
+	}
+	
 }
 
-/**
- * qqq static { Thread t = new Thread(new Runnable() {
- *
- * @Override public void run() { for (;;) { try { LOG.finer(Thread.currentThread() + " sleeping for 5 minutes"); Thread.sleep(5 * 60000);
- *           LOG.finer(Thread.currentThread() + " awake and calling clean()"); clean(); } catch (Exception e) { LOG.log(Level.WARNING,
- *           "Error in cleaning thread run()", e); } } } }, "OAObjectCacheDelegate.clean"); t.setDaemon(true);
- *           t.setPriority(t.MIN_PRIORITY); LOG.config("create thread "+t); t.start(); }
- ***/
